# paddleOcean

./: .gitignore  QWEN.md  README.md  README.zh-CN.md  README.zh-TW.md  last.ckpt  pyproject.toml
.github/workflows/: ci-tests.yml
.qwen/skills/: aistudio-cloud-upload.md
examples/: image_classifier.py  multi_gpu_train.py
ocean/: __init__.py  cli.py  cloud.py  distributed.py  gear.py  model.py
ocean/_compat/: __init__.py  sot.py  tensor.py
ocean/accelerators/: cpu.py  cuda.py  custom_device.py  xpu.py
ocean/callbacks/: callback.py  checkpoint.py  device_stats_monitor.py  lambda_function.py  lr_finder.py  model_summary.py  on_exception_checkpoint.py  prediction_writer.py  rich_model_summary.py  spike.py  stochastic_weight_avg.py  timer.py  weight_averaging.py
ocean/cli/: __init__.py  __main__.py  model.py  train.py
ocean/core/: mixins.py  optimizer.py  saving.py
ocean/loggers/: comet.py  csv_logs.py  mlflow.py  ocelogger.py  tensorboard.py  visualdl.py  wandb.py
ocean/loops/: evaluation_loop.py  fit_loop.py  prediction_loop.py  progress.py
ocean/metrics/: __init__.py
ocean/plugins/: layer_sync.py
ocean/profilers/: advanced.py  base.py
ocean/strategies/: ddp.py  deepspeed.py  fsdp.py  parallel.py  single_device.py  strategy.py
ocean/trainer/: __init__.py  setup.py  states.py
ocean/tuner/: __init__.py
ocean/utilities/: compile.py
ocean/utils/: colored_tqdm.py  combined_loader.py  imports.py  (+10 more)
tests/: conftest.py  test_api_coverage.py  test_comprehensive.py  test_gan.py  test_metrics.py  test_multi_gpu.py  test_real_training.py  test_smoke.py
(+37 files in other folders)
