[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "paddle-ocean"
version = "0.1.0"
description = "A high-level PaddlePaddle framework inspired by PyTorch Lightning"
requires-python = ">=3.9"
dependencies = [
    "paddlepaddle>=2.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff==0.15.0",
    "pre-commit>=3.0",
]

[tool.ruff]
line-length = 120
target-version = "py39"
exclude = [".git", ".github"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
"**/tests/**" = ["F841"]
"ocean/distributed.py" = ["N801", "N802"]
"ocean/loggers/tensorboard.py" = ["F401"]
"ocean/callbacks/rich_model_summary.py" = ["F401"]

[tool.ruff.format]
preview = true

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 120
filterwarnings = ["ignore::UserWarning"]
